--- a/style.css
+++ b/style.css
@@ -6,34 +6,57 @@
 }
 
 main {
-    background-color: #eee;
-    width: 700px;
-    height: 500px;
     position: absolute;
+    width: 100%;
+    max-width: 350px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0 0 15px #0000003d;
 }
 
 header {
     background-color: #7eca2d;
     height: 50px;
     color: #fff;
-    font-weight: bold;
+    font-weight: bolder;
     display: flex;
     gap: 10px;
     justify-content: center;
     align-items: center;
 }
 
+section.dias-da-semana {
+    background-color: #aaa;
+    padding: 5px;
+    display: flex;
+}
+
+div.dia {
+    width: 50px;
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+div.dia:not(:last-child) {
+    border-right: 1px solid #000;
+}
+
 section.calendario {
+    background-color: #eee;
+    width: 100%;
+    height: 250px;
+    padding: 5px;
     display: grid;
-    grid-template-columns: repeat(7, 100px)/ repeat(5, 100px);
+    grid-template-columns: repeat(7, 50px)/ repeat(5, 50px);
     place-items: stretch stretch;
+    gap: 2px;
 }
 
 div.item {
-    border: 1px solid #000;
-    width: 100px;
-    height: 100px;
+    border: 1px solid #00000040;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #333;
 }
